--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,33 @@ body {
   font-style: normal;
 }
 
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.section {
+  padding: 120px 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 ul {
+  margin: 0;
+  padding-left: 0;
   list-style-type: none;
 }
 a {
@@ -52,6 +78,41 @@ p {
   color: #4d5ae5;
 }
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  margin-right: 76px;
+  padding: 1.5px 0;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.address-list {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
 .header-logo,
 .footer-logo {
   text-transform: uppercase;
@@ -60,6 +121,7 @@ p {
   color: #2e2f42;
   font-size: 18px;
   letter-spacing: 0.03em;
+  line-height: 1.17;
 }
 
 .nav-link {
@@ -87,11 +149,22 @@ address {
   color: #404bbf;
 }
 
+.hero-container {
+  text-align: center;
+}
+
 .hero {
+  padding: 188px 0;
   background-color: #2e2f42;
 }
 
 .order-button {
+  padding: 0;
+  border: none;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  margin-top: 48px;
   background-color: #4d5ae5;
   color: #ffffff;
   font-weight: 500;
@@ -104,15 +177,46 @@ address {
   background-color: #404bbf;
 }
 
-.features-title {
-  text-align: start;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.features-list-item {
+  width: calc((100% - 48px) / 4);
+}
+
+.features-list-sub-item {
+  margin-top: 8px;
 }
 
 .our-team {
   background-color: #f4f4fd;
 }
 
+.team-list {
+  margin-top: 72px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
 .team-list-item {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
 }
 
@@ -121,8 +225,50 @@ address {
   text-align: center;
 }
 
+.employee-name,
+.portfolio-name {
+  margin-bottom: 8px;
+}
+
+.card-container {
+  padding: 32px 16px;
+}
+
+.portfolio-list {
+  margin-top: 72px;
+  display: flex;
+  row-gap: 48px;
+  column-gap: 24px;
+  flex-wrap: wrap;
+}
+
+.portfolio-list-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-card-container {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .footer {
   background-color: #2e2f42;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 16px;
+  padding: 1.5px 0;
+}
+
+.footer-text {
+  max-width: 264px;
 }
 
 .footer-logo,
