--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ p {
 }
 
 .main-title {
+  letter-spacing: 0.02em;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
@@ -59,6 +60,7 @@ p {
 }
 
 .second-title {
+  letter-spacing: 0.02em;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -125,6 +127,7 @@ p {
 }
 
 .nav-link {
+  padding: 24px 0;
   color: #2e2f42;
   font-weight: 500;
 }
@@ -159,17 +162,17 @@ address {
 }
 
 .order-button {
-  padding: 0;
+  line-height: 1.5;
+  padding: 16px 32px;
   border: none;
   border-radius: 4px;
-  width: 169px;
-  height: 56px;
   margin-top: 48px;
   background-color: #4d5ae5;
   color: #ffffff;
   font-weight: 500;
   cursor: pointer;
   letter-spacing: 0.04em;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .order-button:hover,
@@ -196,7 +199,7 @@ address {
 }
 
 .features-list-item {
-  width: calc((100% - 48px) / 4);
+  width: calc((100% - 24px) / 4);
 }
 
 .features-list-sub-item {
@@ -215,6 +218,8 @@ address {
 }
 
 .team-list-item {
+  width: 264px;
+  border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
